<resources>
    <string name="app_name">Proyecto_Parcial3</string>
    <string name="title_activity_menu">Menu_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Agendar Viaje</string>
    <string name="menu_slideshow">Ver Viajes</string>


    <string-array name="spinner_items">
        <item>París</item>
        <item>Roma</item>
        <item>Kioto</item>
        <item>Londres</item>
        <item>Cancún</item>
        <item>Gran Muralla China</item>
        <item>Taj Mahal</item>
        <item>Chichen Itza</item>
        <item>Machu Pichu</item>
        <item>Dubaí</item>
        <item>Madrid</item>
        <item>Lima</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirmar_pass">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="empieza_planear">Empieza a planear!</string>
    <string name="ver_viajes">Ver viajes</string>
    <string name="cambiar_foto">Cambiar foto de perfil</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecciona_destino">Selecciona tu destino:</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_fin">Fecha de fin</string>
    <string name="presupuesto">Presupuesto aproximado ($)</string>
    <string name="tipo_transporte">Tipo de transporte:</string>
    <string name="avi_n">Avión</string>
    <string name="auto">Automóvil</string>
    <string name="notas_adicionales">Notas adicionales</string>
    <string name="guardar_viaje">Guardar Viaje</string>
    <string name="editar_perfil">Editar perfil</string>
</resources>