<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="32dp"
        android:paddingTop="250dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logoLogin"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearanceOverlay="@style/EstiloImagenCircular" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/nombre_usuario"
            app:startIconDrawable="@android:drawable/ic_menu_edit"
            app:boxBackgroundColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
            app:boxBackgroundColor="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/verde"
            android:paddingVertical="14dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnregistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/verde_oscuro"
            android:paddingHorizontal="32dp"
            android:paddingVertical="10dp"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>